--- a/index.html
+++ b/index.html
@@ -1,6 +1,71 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+<html lang="pr-br">
 <head>
-    <meta charset="UTF-8"
-    <meta name
+    
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Perfil Interativo</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
+
+<body class="bg-ligh">
+    <div class="container mt-5">
+        <div class="card" id="profile Card">
+            <div class="card-body text-center">
+                <img src="https://via.placeholder.com/150" alt="Imagem de Perfil" id="profile/mage" class="rounded-circle mb-3" style="width: 150px;">
+
+                <h3 id="profileName">Nome: pedro colares</h3>
+
+                <p id="profile Age">Idade: 18</p>
+
+                <h5>Hobbies:</h5>
+
+                <ul id="hobbles List" class="list-group mb-3">
+
+                    <li class="list-grove-item">Leitura</li>
+                    <li class="list-group-item">Esportes</li>
+                    <li class="list-group-item">Música</li>
+
+                </ul>
+
+                <button class="btn btn-primary me-2" onclick="alterar Nome()">Alterar Nome</button>
+                <button class="btn btn-success me-2" onclick="adicionar Hobby()">Adicionar Hobby</button>
+                <button class="btn btn-warning me-2" onclick="mudar Cor De Fundo()">Mudar Cor de Fundo</button>
+
+            </div>
+        </div>
+    </div>
+
+    <script>
+
+        function alterar Nome() {
+            const novo Nome = prompt("Digite o novo nome:");
+            if (novo Nome) {
+                document.getElementById("profile Name").textContent = "Nome: " + novo Nome;
+            }
+        }
+
+        function adicionar Hobby() {
+            const novo Hobby = prompt("Digite um novo hobby:");
+            if (novo Hobby) {
+                const li = document.createElement("li");
+                li.textContent = novo Hobby;
+                li.className = "list-group-item";
+                document.getElementById("hobbies List").appendChild(li);
+            }
+        }
+
+        function mudar Cor De Fundo() {
+            const cores = ["#8d7da", "#d1ecf2", "#dff0d8", "#fff3cd", "#cce5ff"];
+            const corAleatoria = cores[Math.floor(Math.random() * cores.length)];
+            document.body.style.backgroundColor = corAleatoria;
+        }
+
+    </script>
+
+</body>
+</html>
