--- a/index.html
+++ b/index.html
@@ -5,9 +5,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil Interativo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f8f9fa;
+            transition: background-color 0.5s ease-in-out;
+        }
+
+        .container {
+            max-width: 600px;
+            margin-top: 50px;
+        }
+
+        .card {
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff;
+        }
+
+        .card-body {
+            padding: 2rem;
+        }
+
+        h3, p {
+            color: #333;
+        }
+
+        img {
+            border-radius: 50%;
+            border: 5px solid #fff;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .list-group-item {
+            border-radius: 10px;
+            margin-bottom: 10px;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .list-group-item:hover {
+            transform: translateY(-5px);
+            background-color: #f1f1f1;
+        }
+
+        .btn {
+            border-radius: 30px;
+            padding: 8px 16px;
+            font-weight: 500;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            margin-bottom: 15px;
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            background-color: #0056b3;
+            color: #fff;
+        }
+
+        .btn-secondary {
+            background-color: #6c757d;
+        }
+
+        .btn-dark {
+            background-color: #343a40;
+        }
+
+        .btn-warning {
+            background-color: #f39c12;
+        }
+
+        .btn-info {
+            background-color: #17a2b8;
+        }
+
+        .btn-danger {
+            background-color: #e74c3c;
+        }
+
+        .btn-success {
+            background-color: #28a745;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+        }
+
+        .me-2 {
+            margin-right: 10px;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container">
         <div class="card" id="profileCard">
             <div class="card-body text-center">
                 <img id="profileImage" src="http://via.placeholder.com/150" alt="Imagem do Perfil" class="rounded-circle mb-3" style="width: 150px;">
@@ -16,7 +112,7 @@
             </div>
         </div>
 
-        <h5>Hobbies:</h5>
+        <h5 class="mt-4">Hobbies:</h5>
         <ul id="hobbiesList" class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 Leitura
@@ -28,10 +124,14 @@
             </li>
         </ul>
 
-        <button class="btn btn-primary me-2" onclick="alterarNome()">Alterar Nome</button>
-        <button class="btn btn-success me-2" onclick="adicionarHobby()">Adicionar Hobby</button>
-        <button class="btn btn-warning me-2" onclick="mudarCorDeFundo()">Mudar cor de Fundo</button>
-        <button class="btn btn-info" onclick="mudarFoto()">Mudar Foto</button>
+        <div class="button-container">
+            <button class="btn btn-primary" onclick="alterarNome()">Alterar Nome</button>
+            <button class="btn btn-success" onclick="adicionarHobby()">Adicionar Hobby</button>
+            <button class="btn btn-warning" onclick="mudarCorDeFundo()">Mudar cor de Fundo</button>
+            <button class="btn btn-info" onclick="mudarFoto()">Mudar Foto</button>
+            <button class="btn btn-secondary" onclick="alterarIdade()">Alterar Idade</button>
+            <button class="btn btn-dark" onclick="mostrarAlerta()">Mostrar Alerta</button>
+        </div>
     </div>
 
     <script>
@@ -77,6 +177,19 @@
             if (novaFoto) {
                 document.getElementById("profileImage").src = novaFoto;
             }
+        }
+
+        function alterarIdade() {
+            const novaIdade = prompt("Digite sua nova idade:");
+            if (novaIdade && !isNaN(novaIdade)) {
+                document.getElementById("profileAge").innerText = "Idade: " + novaIdade;
+            } else {
+                alert("Por favor, digite uma idade válida!");
+            }
+        }
+
+        function mostrarAlerta() {
+            alert("Bem-vindo ao seu perfil");
         }
     </script>
 </body>
